--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+    <header>
     <div class="navbar-fixed">
     <nav>
         <div class="nav-wrapper">
@@ -18,6 +19,7 @@
         </div>
     </nav>
     </div>
+</header>
 
     <section id="opening">
     </section>
@@ -57,8 +59,9 @@
             </section>
         </section>
         <!--APP TWO   -->
-        <hr>
+       
         <section id="two">
+ 
      <section class="right">
                 <img src="assets/images/typewriter.jpeg" alt="typewriter" height="300" width="300">
             </section>
