--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                 </div>
             </div>
         </div>
-
-        <!--APP ONE   -->
+<br>
+ <hr></hr>
+        <br>
+        <!--APP two   -->
         <div class="container">
             <div class="row" id="two">
                 <div class="col s5">
@@ -80,7 +82,10 @@
                 </div>
             </div>
         </div>
-
+<br>
+ <hr></hr>
+        <br>
+       
         <!--APP three   -->
         <div class="container">
             <div class="row" id="three">
@@ -97,6 +102,9 @@
             </div>
 
         </div>
+        <br>
+         <hr></hr>
+        <br>
 
 
         <!--APP four   -->
