--- a/index.html
+++ b/index.html
@@ -23,26 +23,32 @@
     </header>
 
     <section id="opening">
+        <div id="text">
+            <h1> Mel DeJesus</h1>
+            <hr></hr>
+            <p> JavaScript Developer</p>
+            <p> MongoDB | Express | React | Node  </p>
+        </div>
     </section>
+
+
 
 
     <section id="about">
 
         <h1> Who Am I? </h1>
         <section id="me">
-            <p> I'm Mel DeJesus. I live in Durham, NC. As a youngster, I had a fondness for an early form of the BASIC computer
+            <p> As a youngster, I had a fondness for an early form of the BASIC computer
                 language.
             </p>
-            <p> In a roundabout way, this led me briefly through an Ohio engineering program before switching to literature and
+            <p> In a roundabout way, this led me into an Ohio engineering program, which I briefly attended before switching into literature and
                 philosophy, both of which I still have a deep affinity for. </p>
-            <p>Later, I spent time teaching classes in writing and research at various NC colleges, exploring the ways that
-                society and media inform, persuade and motivate us. </p>
-            <p> Curious about other forms of landscape, I also spent time at an eco-contemplative center where I worked as an
-                outdoor guide and at a wildcrafting & outdoor school where I facilitated its sales, operational, and communications
-                strategies.
+            <p>Later, I taught writing and research classes at various NC colleges, exploring the ways that
+                we inform and are informed by society and media. </p>
+            <p> Curious about other forms of relationship, I studied and worked as an outdoor guide at an eco-contemplative center, and I facilitated sales, operational, and communications at a wildcrafting & outdoor school.
             </p>
-            <p>Presently, I've returned to writing code, exploring software and front-end web development. I appreciate the
-                way coding allows me to integrate many of my past interests while exploring new forms of expression. </p>
+            <p>Presently, I've returned to writing code, exploring software / web development. I appreciate the
+                way coding integrates many of my past interests while allowing for new forms of expression. </p>
         </section>
     </section>
 
@@ -52,58 +58,58 @@
         <div class="container">
             <div class="row" id="one">
                 <div class="col s5">
-                    <img src="assets/images/typewriter.jpeg" alt="typewriter" height="300" width="300">
+                    <img src="assets/images/GoodTunes.png" alt="typewriter" height="300" width="300">
                 </div>
                 <div class="col s5 offset-s1">
-                    <p> Mongo | Express | React | Node </p>
+                    <p> Mongo | Express | React | Node | Passport</p>
                     <h2> Good Tunes </h2>
                     <p> This app gathers new song recommendations from various music sites.</p>
                     <p> It also allows a user to rate and save select songs to a playlist.</p>
-                    <a> View Project Here </a>
+                    <a href="https://warm-depths-30010.herokuapp.com/" style="color:white"> View Project Here </a>
                 </div>
             </div>
         </div>
-<br>
- <hr></hr>
+        <br>
+        <hr></hr>
         <br>
         <!--APP two   -->
         <div class="container">
             <div class="row" id="two">
                 <div class="col s5">
-                    <p> Mongo | Express | React | Node </p>
-                    <h2> Good Tunes </h2>
-                    <p> This app gathers new song recommendations from various music sites.</p>
-                    <p> It also allows a user to rate and save select songs to a playlist.</p>
-                    <a> View Project Here </a>
+                    <p> MySQL | Express | React | Node | Auth-O</p>
+                    <h2> Roadie </h2>
+                    <p> This app gathers allows the user to save itineraries of past and future trips. </p>
+                    <a href=" https://roadie2017.herokuapp.com/" style="color: white"> View Project Here </a>
 
                 </div>
                 <div class="col s5 offset-s1">
-                    <img src="assets/images/typewriter.jpeg" alt="typewriter" height="300" width="300">
+                    <img src="assets/images/roadie.png" alt="typewriter" height="300" width="300">
                 </div>
             </div>
         </div>
-<br>
- <hr></hr>
         <br>
-       
+        <hr></hr>
+        <br>
+
         <!--APP three   -->
         <div class="container">
             <div class="row" id="three">
                 <div class="col s5">
-                    <img src="assets/images/typewriter.jpeg" alt="typewriter" height="300" width="300">
+                    <img src="assets/images/booksmovies.png" alt="booksmovies" height="300" width="300">
                 </div>
                 <div class="col s5 offset-s1">
-                    <p> Mongo | Express | React | Node </p>
-                    <h2> Good Tunes </h2>
-                    <p> This app gathers new song recommendations from various music sites.</p>
-                    <p> It also allows a user to rate and save select songs to a playlist.</p>
-                    <a> View Project Here </a>
+                    <p> Javascript | Bootstrap | Firebase  </p>
+                    <h2> Books / Movies </h2>
+                    <p> This app allows you to submit a movie title and it recommends a related book title. 
+ </p>
+                    <p> It also displays recent movies searched.</p>
+                    <a href=" https://applesauce-collaborative.github.io/Movies-to-Books/" > View Project Here </a>
                 </div>
             </div>
 
         </div>
         <br>
-         <hr></hr>
+        <hr></hr>
         <br>
 
 
@@ -111,15 +117,15 @@
         <div class="container">
             <div class="row" id="two">
                 <div class="col s5">
-                    <p> Mongo | Express | React | Node </p>
-                    <h2> Good Tunes </h2>
-                    <p> This app gathers new song recommendations from various music sites.</p>
-                    <p> It also allows a user to rate and save select songs to a playlist.</p>
-                    <a> View Project Here </a>
+                    <p> MySQL | Express | Handlebars | Node </p>
+                    <h2> Project Manager </h2>
+                    <p> This app allows you to add projects and rate them as completed or not.</p>
+
+                    <a href="https://hidden-everglades-36713.herokuapp.com/"> View Project Here </a>
 
                 </div>
                 <div class="col s5 offset-s1">
-                    <img src="assets/images/typewriter.jpeg" alt="typewriter" height="300" width="300">
+                    <img src="assets/images/projectManager.png" alt="project" height="300" width="300">
                 </div>
             </div>
         </div>
@@ -127,7 +133,7 @@
     </section>
 
     <section id="web">
-        <h1>   On the Web </h1>
+        <h1> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;On the Web </h1>
         <aside>
 
 
@@ -135,34 +141,36 @@
                 <ul>
                     <div class="container">
                         <div class="row">
-                            <div class="col s2 offset-s1">
+                            <div class="col s2 offset-s4">
                                 <li><a href="https://github.com/edgewood1" target="_blank">
               <i class="fa fa-github fa-lg" aria-hidden="true"> </i> 
                 </a> </li>
                             </div>
-                            <div class="col s2">
+                         
 
-                                <li> <a href="https://twitter.com/meldejesus007" target="_blank">
+                                <div class="col s2">
+                                    <li> <a href="https://www.linkedin.com/in/mel-dejesus-a5754056?trk=nav_responsive_tab_profile"> 
+              <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i> 
+                </a> </li>
+                                </div>
+
+                                <!--    <div class="col s2"><li> <a href="https://twitter.com/meldejesus007" target="_blank">
               <i class="fa fa-twitter fa-lg" aria-hidden="true"> </i> 
                 </a> </li> <br>
-                            </div>
-                            <div class="col s2">
-                                <li> <a href="https://meldejesus.wordpress.com/" target="_blank">
+                            </div> -->
+                                <div class="col s2">
+                                    <li> <a href="https://meldejesus.wordpress.com/" target="_blank">
               <i class="fa fa-wordpress fa-lg" aria-hidden="true"> </i> 
                 </a> </li>
                                 </div>
-                                    <div class="col s2">
-                                        <li> <a href="https://www.linkedin.com/in/mel-dejesus-a5754056?trk=nav_responsive_tab_profile"> 
-              <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i> 
-                </a> </li>
-                                    </div>
-                                    <div class="col s2">
+
+                                <!-- <div class="col s2">
                                         <li> <a href="flicker.com">
               <i class="fa fa-flickr fa-md" aria-hidden="true"> </i> 
               </a> </li>
-                                    </div>
-                                </div>
+                                    </div> -->
                             </div>
+                        </div>
                 </ul>
                 </div>
         </aside>
@@ -173,7 +181,7 @@
         <h1> Contact </h1>
         <div id="email">
             <a href="mailto:meldejesus22@gmail.com?subject=Profile_Contact">
-Send Email</a>
+Click here to send me an email</a>
         </div>
     </section>
 
@@ -181,15 +189,17 @@ Send Email</a>
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <!-- <h5 class="white-text">Footer Content</h5> -->
+                    <!-- <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p> -->
                 </div>
-                <div class="col l4 offset-l2 s12">
+                <div class="col l6 offset-10 s12">
                     <h5 class="white-text">Links</h5>
                     <ul>
-                        <li class="link"><a class="grey-text text-lighten-3" href="www.durhamtech.edu">Durham Tech</a></li>
-                        <li class="link"><a class="grey-text text-lighten-3" href="www.beholdnature.com">Center for Education, Imagination, and the Natural World</a></li>
-                        <li class="link"><a class="grey-text text-lighten-3" href="www.willswildherbs.com">Will's Wild Herbs</a></li>
+                        <li class="link"><a class="grey-text text-lighten-3" href="https://www.durhamtech.edu/">Durham Tech</a></li>
+                        <br></br>
+                        <li class="link"><a class="grey-text text-lighten-3" href="https://www.beholdnature.org/">Center for Education, Imagination, and the Natural World</a></li>
+                        <br></br>
+                        <li class="link"><a class="grey-text text-lighten-3" href="https://www.willswildherbs.org/">Will's Wild Herbs</a></li>
 
                     </ul>
                 </div>
