--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row" id="one">
                 <div class="col s5">
-                    <img src="assets/images/goodTunes.png" alt="typewriter" height="300" width="300">
+                    <img src="assets/images/goodtunes.png" alt="goodTunes" height="300" width="300">
                 </div>
                 <div class="col s5 offset-s1">
                     <p> Mongo | Express | React | Node | Passport</p>
