--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
                 philosophy, both of which I still have a deep affinity for. </p>
             <p>Later, I taught writing and research classes at various NC colleges, exploring the ways that
                 we inform and are informed by society and media. </p>
-            <p> Curious about other forms of relationship, I studied and worked as an outdoor guide at an eco-contemplative center, and I facilitated sales, operational, and communications at a wildcrafting & outdoor school.
+            <p> Curious about other forms of relationship, I studied and worked as an outdoor guide at an eco-contemplative center, and I facilitated sales, operations, and communications at a wildcrafting & outdoor school.
             </p>
             <p>Presently, I've returned to writing code, exploring software / web development. I appreciate the
                 way coding integrates many of my past interests while allowing for new forms of expression. </p>
+                <p> I enjoy the elements and grammar of computer languages as well as the kinds of applications they can create and the kinds of community and collaboration that they can foster.  </p>
+                <p> I also enjoy the ways that a front-end design can connect with a user, the ways its data can pass back and forth among various databases, and the  restraints that security protocols can place on this passage.  </p>
         </section>
     </section>
 
