--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row" id="two">
                 <div class="col s5">
-                    <p> MySQL | Express | React | Node | Auth-O</p>
+                    <p> MySQL | Express | Node | Auth-O</p>
                     <h2> Roadie </h2>
                     <p> This app gathers allows the user to save itineraries of past and future trips. </p>
                     <a href=" https://roadie2017.herokuapp.com/" style="color: white"> View Project Here </a>
