--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="row" id="one">
                 <div class="col s5">
-                    <img src="assets/images/goodtunes.png" alt="goodTunes" height="300" width="300">
+                    <img src="assets/images/goodTunes.png" alt="goodTunes" height="300" width="300">
                 </div>
                 <div class="col s5 offset-s1">
                     <p> Mongo | Express | React | Node | Passport</p>
@@ -80,7 +80,7 @@
                 <div class="col s5">
                     <p> MySQL | Express | Node | Auth-O</p>
                     <h2> Roadie </h2>
-                    <p> This app gathers allows the user to save itineraries of past and future trips. </p>
+                    <p> This app allows the user to save itineraries of past and future trips. </p>
                     <a href=" https://roadie2017.herokuapp.com/" style="color: white"> View Project Here </a>
 
                 </div>
