--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
     <section id="about">
 
         <h1> Who Am I? </h1>
+        <br></br>
+        <div style="text-align: center">
+        <a href="resume.html" target="_blank" style="font-size: 140%">Click for Resume</a>
+        <div>
+<br> </br> 
         <section id="me">
             <p> As a teenager, I explored some basic forms of coding. This, in a roundabout way, led me into an Ohio engineering program, which I briefly attended before switching into literature and
                 philosophy, both of which I still have a deep affinity for. </p>
