--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                     <!-- image  -->
                     <div class="col s5">
-                            <img src="assets/images/goodtunes.png" alt="goodTunes" height="300" width="300">
+                            <img src="assets/images/goodTunes.png" alt="goodTunes" height="300" width="300">
                         </div>
             </div>
         </div>
