--- a/resume.html
+++ b/resume.html
@@ -1193,11 +1193,11 @@ style='font-size:15.0pt;font-family:"Gill Sans MT"'><o:p>&nbsp;</o:p></span></p>
 style='font-size:15.0pt;font-family:"Gill Sans MT"'><a
 href="https://www.linkedin.com/in/mel-dejesus-a5754056/">LinkedIn</a><span
 style='mso-tab-count:1'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span><a
-href="https://edgewood1.github.io/new-portfolio/">GitHub<span style='mso-tab-count:
+href="https://github.com/edgewood1">GitHub<span style='mso-tab-count:
 1'> </span></a><span style='mso-tab-count:1'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span><a
-href="https://code757.wordpress.com/">Portfolio</a><span style='mso-tab-count:
+href="https://edgewood1.github.io/new-portfolio/">Portfolio</a><span style='mso-tab-count:
 1'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span><a
-href="https://github/edgewood1">Blog</a><o:p></o:p></span></p>
+href="https://code757.wordpress.com/">Blog</a><o:p></o:p></span></p>
 
 </div>
 
