--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
                 <div class="nav-wrapper">
                     <img id="ibis" src="assets/images/ibis.png" alt="ibis" class="brand-logo">
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
+                            <li><a href="#opening">Home</a></li>
+                            <li><a href="resume2.html">Resume</a></li>
                         <li><a href="#about">About Me</a></li>
                         <li><a href="#apps">Applications</a></li>
                         <li><a href="#web">On The Web</a></li>
@@ -39,7 +41,7 @@
         <h1> Who Am I? </h1>
         <br></br>
         <div style="text-align: center">
-        <a href="resume.html" target="_blank" style="font-size: 140%">Click for Resume</a>
+        <a href="resume2.html" target="_blank" style="font-size: 140%">Click for Resume</a>
         <div>
 <br> </br> 
         <section id="me">
