--- a/resume2.html
+++ b/resume2.html
@@ -11,6 +11,14 @@
             <nav>
                 <div class="nav-wrapper">
                     <!-- <img id="ibis" src="assets/images/ibis.png" alt="ibis" class="brand-logo"> -->
+                    <ul id="nav-mobile" class="left">
+                            <li>
+                                    <a href="https://edgewood1.github.io/new-portfolio/">
+                                        <h5><span >Return to Portfolio</span>
+                                            <h5>
+                                    </a>
+                                </li>
+                    </ul>
                     <ul id="nav-mobile" class="right">
 
                         <li><a href="https://github.com/edgewood1" target="_blank">
@@ -24,12 +32,12 @@
                         <li> <a href="https://code757.wordpress.com/" target="_blank">
                                     <i class="fa fa-wordpress fa-3x" aria-hidden="true"> </i> 
                                         </a> </li>
-                        <li>
+                        <!-- <li>
                             <a href="https://edgewood1.github.io/new-portfolio/">
                                 <h5><span >Portfolio</span>
                                     <h5>
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </nav>
